# bpf-mcp

./: .mcp.json  CLAUDE.md  Cargo.toml  Containerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
src/tools/: mod.rs
tests/: test_server.sh  test_server_docker.sh
