[package]
name = "bpf-mcp"
version = "0.1.0"
edition = "2024"

[features]
http_service = []

[dependencies]
rmcp = { version = "0.8.5", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libbpf-rs = "0.24"
btf-rs = "1.1"
axum = { version = "0.8", features = ["macros"] }

[dev-dependencies]
tempfile = "3.15"
